[tool.poetry]
name = "robotics"
version = "0.1.0"
description = ""
authors = ["MissaFissa <meho11@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.1"
pyfirmata = "^1.1.0"
serial = "^0.0.97"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"